[package]
name = "skippy-tracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skippy_tracer"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
once_cell = "1.21.3"
pyo3 = "0.24.0"
rusqlite = { version = "0.35.0", default-features = false, features = ["bundled"] }

[build-dependencies]
pyo3-build-config = { version = "0.24.0", features = ["resolve-config"] }
